terminada - fix letter spacing

--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ h1 {
 p {
     font-size: 16px;
     padding: 1em 0;
-    letter-spacing: 1px;
+    /* letter-spacing: 1px; */
 }
 
 .hero-content p {
